главная страница подогнана под размер
задолбался

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ h2 {
 }
  
 .conteiner {
-  width: 1230px;
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
@@ -102,7 +102,7 @@ header {
   margin-right: 15px;
 }
 
-.img-box {
+.img-box-nav {
   display: inline-block;
   margin-right: 10px;
   vertical-align: middle;
@@ -157,7 +157,9 @@ h1 {
 /* Преимущества features------*/
 
 .features {
-  margin-top: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  border-bottom: 1px solid #ECECEC;
 }
 
 .features h3 {
@@ -175,16 +177,17 @@ h1 {
 
 .features-groupe {
   display: flex; 
-  justify-content: space-between;
-  /* border: 1px solid yellow; */
 }
 
-.features-box-content {
-  display: inline-block;
-  width: 278px;
-  height: 251px;
-  margin-right: 30px;
+.features-box-content > img {
+  display: block;
+  width: 270px;
+  height: 120px;
+
   /* border: 1px solid grey; */
+}
+.features-box-content{
+  margin-right: 30px;
 }
 
 .features-box-content:last-child {
@@ -198,7 +201,7 @@ h1 {
  /* Чем мы занимаемся doing --- */
 
 .doing {
-  margin-top: 94px;
+  padding-top: 94px;
 }
 
 .block-doing > ul {
@@ -210,21 +213,22 @@ h1 {
   margin-right: 30px;
 }
 
+.img-box {
+  display: block;
+}
+
 .block-doing-txt:last-child {
   margin-right: 0px;
 }
 
 .position-block-doing {
   position: relative;
-  width: 380px;
-  height: 294px;
   margin-top: 50px;  
 }
 
 .doing-txt {
   display: inline-block;
   width: 100%;
-
   font-size: 14px;
   text-align: center;
   text-transform: uppercase;
@@ -248,7 +252,7 @@ h1 {
 
 .command-box {
   display: block;
-  width: 278px;
+  width: 270px;
   height: 422px;
   margin-bottom: 94px;
   margin-right: 29px;
@@ -262,8 +266,7 @@ h1 {
 
 .img-comand {
   display: block;
-  width: 278px;
-  height: 260px;
+  width: 270px;
 }
 
 .command h2 {
@@ -286,9 +289,29 @@ h1 {
   margin-top: 16px;
 }
 
+.command-soc-link > ul> li,
+.footer-cammon > ul > li {
+  margin-right: 11px;
+}
+
+.command-soc-link > ul> li > img,
+.footer-cammon > ul > li > img,
+.command-soc-link > ul> li > a,
+.footer-cammon > ul > li > a,
+.img-box {
+  display: block;
+  line-height: 0px;
+}
+
+.command-soc-link > ul> li:last-child,
+.footer-cammon > ul > li:last-child {
+  margin-right: 0;
+}
+
+
 .command-soc-link ul {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 /* Постоянные клиенты ---- */
@@ -322,12 +345,12 @@ footer {
 
 .footer-conteiner .conteiner {
   display: flex;
+  justify-content: space-around;
 }
 
 .footer-left {
   display: block;
   margin-top: 48px;
-  /* margin-left: 15px; */
 }
 
 .footer-cammon {
@@ -393,7 +416,10 @@ footer {
   text-align: center;
   margin-top: 28px;
   padding-top: 18px;
-  padding-bottom: 20px;
+  padding-bottom: 21px;
+}
+
+.developed {
   border-top: 1px solid rgba(255, 255, 255, 0.1);;
 }
 
