--- a/css/colors.css
+++ b/css/colors.css
@@ -90,6 +90,8 @@ h1 {
   color: var(--accent-color);
 }
 
+.mail-content,
+.tel-content,
 .mailtel,
 .card-discr {
   color: var(--paragraf-color);
@@ -128,6 +130,7 @@ footer .developed {
 .link-portfolio:focus {
   color: var(--background-text-footer);
   background-color: var(--accent-color);
+  transition: all 0.2s;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
