--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,6 @@ h2 {
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
-  /* outline: 1px solid grey; */
 }
 
 /* header-conteiner -------------*/
@@ -114,37 +113,6 @@ header {
   vertical-align: middle;
 }
 
-
-/* ПОПЫТКА СДЕЛАТЬ ПОДЧЕРКИВАНИЕ ПСЕВДОКЛАССОМ 
-
-.activ::after {
-  content: "";
-  display: block;
-  border-bottom: 4px solid var(--accent-color)
- background-image: url(../images/hover.svg);
-transform-origin: ;
-transform: scaleX(0);
-transition: 0.2s;
-} 
-
-.site-nav .link::before,
-.site-nav .link::after {
-  content: "";
-  width: 60px;
-  height: 4px;
-}
-
-.site-nav .activ::before {
-  margin-bottom: 1px;
-  background-image: url("../images/hover.svg");
-}
-
-.site-nav .activ::after {
-  margin-bottom: 1px;
-  background-image: url("../images/hover.svg");
-} */
-
-/* section HERO-------------- */
 .header-hero {
   text-align: center;
 }
@@ -200,9 +168,8 @@ h1 {
   display: block;
   width: 270px;
   height: 120px;
-
-  /* border: 1px solid grey; */
 }
+
 .features-box-content{
   margin-right: 30px;
 }
@@ -368,9 +335,9 @@ footer {
 .footer-left > .logo {
 margin-bottom: 9px;
 } 
-
+/* 
 .footer-cammon {
-} 
+}  */
 
 .footer-cammon > ul {
   display: flex;
@@ -443,100 +410,4 @@ margin-bottom: 9px;
 
 .developed {
   border-top: 1px solid rgba(255, 255, 255, 0.1);;
-}
-
-
-
-/* --------------------------- */
-/* PORTFOLIO page */
-
-.conteiner-portfolio {
-  width: 1200px;
-  margin-right: auto;
-  margin-left: auto;
-  /* background-color: indigo; */
-}
-
-.filtrs-batton {
-  display: flexbox;
-  padding-top: 94px;
-}
-
-.filtrs-batton > ul {
-  display: flex;
-  justify-content: center;
-}
-
-.list-portfolio {
-  margin-right: 8px;
-}
-
-.link-portfolio {
-  font-weight: 500;
-  line-height: 1.6;
-  padding: 6px 22px;
-  display: inline-block;
-  border-radius: 4px;
-}
-
-.list-portfolio:last-child {
-  margin-right: 0;
-}
-
-/* +++++++++++++ */
-
-.projeck-conteiner {
-  margin-top: 50px;
-}
-
-.projeck-conteiner > ul {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.card {
-  display: block;
-  width: 370px;
-  margin-right: 30px;
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.card-img {
-  display: block;
-}
-
-.card-content {
-  border: 1px solid #eeeeee;
-  border-top-width: 0px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-.card-title {
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  text-align: left;
-  padding-left: 24px;
-  padding-top: 20px;
-}
-
-.card-discr {  
-  line-height: 1.8;
-  text-align: left;
-  padding-left: 24px;
-  padding-top: 4px;
-  padding-bottom: 20px;
-}
-
-.card:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.card:nth-child(3n-2) {
-  margin-left: 15px;
-}
-
-.card:nth-child(n + 4) {
-margin-top: 30px;
 }
