--- a/css/styles.css
+++ b/css/styles.css
@@ -344,6 +344,7 @@ margin: -1;
   width: 270px;
   margin-bottom: 94px;
   margin-right: 29px;
+  background-color: white;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   overflow: hidden;
