--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ h2 {
 /* header-conteiner ===================*/
 .underline {
   outline: 1px solid #ECECEC;
-}
+}  /* нижняя линии под шапкой с навигацией */
 
 .header-nav {
   display: flex;
@@ -70,11 +70,11 @@ h2 {
 
 .site-nav {
   display: flex;
+  margin-left: 85px;
 }
 
-.site-nav .item {
-  margin-right: 36px;
-  position: relative;
+.site-nav > li {
+  margin-right: 50px;
 }
 
 .site-nav .activ {
@@ -89,74 +89,66 @@ h2 {
   height: 4px;
   left: 0;
   bottom: 0;
-  color: black;
   background-color: var(--accent-color);
   border-radius: 2px;
-}
-
-.navigation{
-  margin-left: 86px;
-}
-
-.header-buttons {
-  margin-left: auto;
-}
+}   /* это нижнее подчеркивание всего блока навигации*/
 
 .site-nav .item {
   padding: 32px 0;
 }
 
-.site-nav .item:last-child {
+.site-nav > li:last-child {
   margin-right: 0px;
 }
 
 .site-nav .link {
 padding: 32px 0;
-}
+}  /* это для нижнего подчеркивания кнопок в навигации*/
 
-.header-buttons ul {
+.contacts-links {
+  margin-left: auto;
   display: flex;
 }
 
-.header-buttons .item {
-  margin-right: 50px;
-  align-items: baseline;
+.contacts-links > .item > .link {
+  display: flex;
+  align-items: center;
 }
 
-.mail,
-.phone {
-  position: relative;
+.contacts-links > li {
+  margin-right: 50px;
 }
 
 .mail::before {
   content: '';
-  display: block;
-  position: absolute;
+  display: inline-flex;
   width: 16px;
   height: 12px;
-  left: -26px;
-  top: 5px;
+  margin-right: 8px;
   background-image: url(../images/envelope.svg);
+  background-size: contain;
+  background-position: bottom;
   background-repeat: no-repeat;
 }
 
 .phone::before {
   content: '';  
-  display: block;
-  position: absolute;
+  display: inline-block;
   width: 10px;
   height: 15px;
-  left: -16px;
-  top: 3px;
+  margin-right: 8px;
   background-image: url(../images/smartphone.svg);
+  background-size: contain;
+  background-position: top;
   background-repeat: no-repeat;
+
 }
 
-.header-buttons .item:last-child {
+.contacts-links > li:last-child {
   margin-right: 15px;
 }
 
-.header-buttons a,
+.contacts-links a,
 .site-nav {
   font-size: 14px;
 }
@@ -248,7 +240,7 @@ margin: -1;
 .features-box-content::before {
   content: '';
   display: block;
-  width: 270px;
+  /* width: 270px; */
   height: 120px;
   border-radius: 4px;
   background-size: 70px 70px;
@@ -277,10 +269,6 @@ margin: -1;
 
 .features-box-content:last-child {
   margin-right: 0px;
-}
-
-.features-box-content:first-child {
-  margin-left: 0px;
 }
 
  /* Чем мы занимаемся doing --- */
@@ -331,17 +319,18 @@ margin: -1;
 .list-command-box{
   display: flex;
   margin-top: 50px;
+  padding-bottom: 94px;
 }
+
 
 .command-box {
   display: block;
   width: 270px;
-  margin-bottom: 94px;
   margin-right: 29px;
-  background-color: white;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   overflow: hidden;
+  background-color: white;
 }
 
 .command-box::before {
@@ -349,24 +338,25 @@ margin: -1;
   content: '';
   width: auto;
   height: 260px;
+  background-color: lightslategray;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
 }
 
-.command-box.employee-a::before{
+.command-box.employee-a::before {
   background-image: url('../images/comand/a.jpg');
 }
 
-.command-box.employee-b::before{
+.command-box.employee-b::before {
   background-image: url('../images/comand/b.jpg');
 }
 
-.command-box.employee-c::before{
+.command-box.employee-c::before {
   background-image: url('../images/comand/c.jpg');
 }
 
-.command-box.employee-d::before{
+.command-box.employee-d::before {
   background-image: url('../images/comand/d.jpg');
 }
 
@@ -395,32 +385,20 @@ margin: -1;
 }
 
 .command-soc-link {
-  display: block;
+  display: flex;
   margin-top: 15px;
   margin-bottom: 24px;
+  justify-content: center;
 }
 
-.command-soc-link > ul> li,
-.footer-cammon > ul > li {
-  margin-right: 11px;
+.command-soc-link > li {
+  margin-right: 10px;
+  justify-content: space-evenly;
 }
 
-
-.command-soc-link > ul > li > a,
-.footer-cammon > ul > li > a {
-  display: block;
-  /* line-height: 0px; */
-}
-
-.command-soc-link > ul> li:last-child,
+.command-soc-link > li:last-child,
 .footer-cammon > ul > li:last-child {
   margin-right: 0;
-}
-
-
-.command-soc-link ul {
-  display: flex;
-  justify-content: center;
 }
 
 /* Постоянные клиенты ---- */
@@ -457,17 +435,43 @@ footer {
   justify-content: space-between;
   align-items: baseline;
   padding-top: 48px;
+  padding-bottom: 18px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);;
 }
 
 .footer-left > .logo {
 margin-bottom: 9px;
 } 
-/* 
-.footer-cammon {
-}  */
 
 .footer-cammon > ul {
   display: flex;
+  margin-top: 21px;
+}
+
+.footer-cammon > ul > li {
+  margin-right: 11px;
+}
+
+.soc-links::before {
+  content: '';
+  display: block;
+  width: 44px;
+  height: 44px;
+  border-radius: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.soc-links:hover:before  {
+  content: '';
+  display: block;
+  width: 44px;
+  height: 44px;
+  border-radius: 100%;
+  background-color: #2196F3;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .mail-content,
@@ -549,130 +553,4 @@ input[type=text] {
   text-align: center;
   margin-top: 21px;
   padding-bottom: 21px;
-}
-
-.footer-conteiner .conteiner {
-  padding-bottom: 18px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);;
-}
-
-.soc-links {
-  margin-right: 44px;
-  margin-top: 21px;
-}
-
-.instafram {
-  position: relative;}
-
-.instafram::before {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background: url(../images/instagram.svg);
-  background-color: rgba(255, 255, 255, 0.1);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.soc-links:hover:before  {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background: url(../images/instagram.svg);
-  background-color: #2196F3;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.twitter {
-  position: relative;}
-
-.twitter::before {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background: url(../images/twitter.svg);
-  background-color: rgba(255, 255, 255, 0.1);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.twitter:hover:before  {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background: url(../images/twitter.svg);
-  background-color: #2196F3;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.facebook {
-  position: relative;}
-
-.facebook::before {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background: url(../images/facebook.svg);
-  background-color: rgba(255, 255, 255, 0.1);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.facebook:hover:before  {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background: url(../images/facebook.svg);
-  background-color: #2196F3;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.linkedin {
-  position: relative;}
-
-.linkedin::before {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background: url(../images/linkedin.svg);
-  background-color: rgba(255, 255, 255, 0.1);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.linkedin:hover:before  {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background: url(../images/linkedin.svg);
-  background-color: #2196F3;
-  background-repeat: no-repeat;
-  background-position: center;
 }
