--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -28,7 +28,7 @@
   margin-right: 0;
 }
 
-/* projeck-conteiner ============= */
+/* projeck-conteiner =====++======== */
 
 .projeck-conteiner {
   display: flex;
@@ -130,3 +130,5 @@
 .card:nth-child(n + 4) {
 margin-top: 30px;
 }
+
+/* іаіваіаві */
