--- a/css/styles.css
+++ b/css/styles.css
@@ -50,22 +50,17 @@ h2 {
 }
 
 /* header-conteiner ===================*/
-.underline {
-  outline: 1px solid #ECECEC;
-}  /* нижняя линии под шапкой с навигацией */
-
-.header-nav {
+.header-nav .conteiner {
   display: flex;
   align-items: center;
 }
 
-.block-logo {
-  display: inline-block;
-  margin-left: 15px;
-}
+.header-nav {
+  outline: 1px solid #ECECEC;
+}  /* это нижнее подчеркивание всего блока навигации*/
 
 .logo {
-  display: inline-block;
+  display: block;
 }
 
 .site-nav {
@@ -91,7 +86,7 @@ h2 {
   bottom: 0;
   background-color: var(--accent-color);
   border-radius: 2px;
-}   /* это нижнее подчеркивание всего блока навигации*/
+} 
 
 .site-nav .item {
   padding: 32px 0;
