--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -110,8 +110,9 @@
 
   color: #FFFFFF;
   padding: 20px;
-  background-color: rgba(33, 150, 243, 0.9);
-
+  /* background-color: rgba(33, 150, 243, 0.9); */
+  linear-gradient( to right, rgba(47, 48, 58, 0.8),rgba(47, 48, 58, 0.8)),
+  url(../images/main_foto.jpg);
 }
 
 .card-title {
