--- a/css/styles.css
+++ b/css/styles.css
@@ -522,6 +522,7 @@ margin-bottom: 9px;
   height: 24px;
   right: 28px;
   bottom: 12px;
+  color: #ffffff;
   background-image: url(../images/sprite.svg#icon-send);
 }
 
