--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -177,7 +177,7 @@ margin-top: 30px;
   height: 24px;
   right: 28px;
   bottom: 12px;
-  background-image: url(../images/icon-send.svg);
+  background-image: url('../images/sprite.svg#icon-send');
 }
 
 .subscribe-button {
