--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -168,6 +168,10 @@ margin-top: 30px;
   padding: 15px 62px 15px 29px;
   border: 2px solid transparent;
   border-radius: 4px;
+}
+
+.subscribe-button-icon {
+  display: inline-block;
   fill: white;
 }
 
