--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -171,7 +171,10 @@ margin-top: 30px;
 }
 
 .subscribe-button-icon {
+  width: 24px;
+  height: 24px;
   display: inline-block;
+  position: absolute;
   fill: white;
 }
 
