--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -173,7 +173,9 @@ margin-top: 30px;
 .subscribe-button-icon {
   width: 24px;
   height: 24px;
-  display: inline-block;
+  left: 10px;
+  top: 5px;
+  display: block;
   position: absolute;
   fill: white;
 }
