--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -163,11 +163,14 @@ margin-top: 30px;
 }
 
 .subscribe-button {
-  display: inline-block;
-  position: relative;
+  display: flex;
   padding: 15px 62px 15px 29px;
   border: 2px solid transparent;
   border-radius: 4px;
+}
+
+..subscribe-button > b {
+  display: block;
 }
 
 .subscribe-button-icon {
@@ -176,7 +179,6 @@ margin-top: 30px;
   left: 10px;
   top: 5px;
   display: block;
-  position: absolute;
   fill: white;
 }
 
