--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -164,17 +164,18 @@ margin-top: 30px;
 
 .subscribe-button {
   display: flex;
-  justify-content: baseline;
-  padding: 15px 62px 15px 29px;
+  justify-content:center;
+  padding: 15px 29px 15px 29px;
   border: 2px solid transparent;
   border-radius: 4px;
 }
 
 .subscribe-button > b {
-  display: block;
+  display: flexbox;
 }
 
 .subscribe-button-icon {
+  display: flexbox;
   width: 24px;
   height: 24px;
   fill: white;
