--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -171,11 +171,11 @@ margin-top: 30px;
 }
 
 .subscribe-button > b {
-  display: flexbox;
+  display: inline-block;
 }
 
 .subscribe-button-icon {
-  display: flexbox;
+  display: inline-block;
   width: 24px;
   height: 24px;
   fill: white;
