--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -165,6 +165,7 @@ margin-top: 30px;
 .subscribe-button {
   display: flex;
   justify-content:center;
+  align-items: center;
   padding: 15px 29px 15px 29px;
   border: 2px solid transparent;
   border-radius: 4px;
@@ -178,6 +179,7 @@ margin-top: 30px;
   display: inline-block;
   width: 24px;
   height: 24px;
+  margin-left: 10px;
   fill: white;
 }
 
