--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -195,7 +195,7 @@ margin-top: 30px;
   display: block;
   width: 24px;
   height: 24px;
-  /* padding: 13px 28px 13px 10px; */
+  padding: 13px 28px 13px 10px;
   fill: white;
 }
 
