--- a/css/styles.css
+++ b/css/styles.css
@@ -413,7 +413,9 @@ margin: -1;
   background-color: #2196F3;
 }
 
-/* Постоянные клиенты -------- */
+/*/* .displayed {
+  display: block;
+} */
 
 .clients h2 {
   margin-top: 94px;
@@ -425,25 +427,27 @@ margin: -1;
   justify-content: center;
   align-items: center;
 }
-
-.displayed {
-  display: block;
-}
-
 .box-clietns > li {
+  display: block;
+  width: 170px;
+  height: 90px;
   margin-right: 30px;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
 }
-
+.box-clietns > li:hover {
+  border: 1px solid #2196F3;
+}
 .box-clietns > li:last-child {
   margin-right: 0px;
 } 
-
 .box-clietns-icon {
-  width: 170px;
-  height: 90px;
-  border: 1px solid #2196F3;
-  border-radius: 4px;
+  fill: #AFB1B8;
 }
+.box-clietns-icon:hover {
+  fill: #2196F3;
+}
+
 
 /* footer ---------------- */
 
