--- a/css/styles.css
+++ b/css/styles.css
@@ -427,7 +427,7 @@ margin: -1;
   /* justify-content: center;
   align-items: center; */
 }
-.box-clietns > li {
+.box-clietns > li > a {
   display: block;
   width: 170px;
   height: 90px;
@@ -436,18 +436,19 @@ margin: -1;
   border-radius: 4px;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
+ background-color: tomato;
 }
-.box-clietns > li:hover {
+.box-clietns > li > a:hover {
+  background-color: green;
   border: 1px solid #2196F3;
 }
-.box-clietns > li:last-child {
+.box-clietns > li> a:last-child {
   margin-right: 0px;
 } 
 .box-clietns-icon {
   display: block;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
   fill: #AFB1B8;
 }
 .box-clietns-icon:hover {
