--- a/css/styles.css
+++ b/css/styles.css
@@ -427,26 +427,27 @@ margin: -1;
   /* justify-content: center;
   align-items: center; */
 }
-.box-clietns > li > a {
+.box-clietns > li {
   display: block;
   width: 170px;
   height: 90px;
   margin-right: 30px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
  background-color: tomato;
 }
-.box-clietns > li > a:hover {
+.box-clietns > li >:hover {
   background-color: green;
   border: 1px solid #2196F3;
 }
-.box-clietns > li> a:last-child {
+.box-clietns > li>:last-child {
   margin-right: 0px;
 } 
 .box-clietns-icon {
   display: block;
+  background-size: contain;
   /* justify-content: center;
   align-items: center; */
   fill: #AFB1B8;
