--- a/css/styles.css
+++ b/css/styles.css
@@ -441,9 +441,16 @@ margin: -1;
 /* .box-clietns > li >:hover {
   border: 1px solid #2196F3;
 } */
-.box-clietns-icon {
+
+.box-clietns > li > a {
+  display: block;
+  margin: 0;
+  padding: 0;
   width: 170px;
   height: 90px;
+}
+.box-clietns-icon {
+  display: block;
   border-radius: 4px;
   border: 1px solid #AFB1B8;
   display: block;
