--- a/css/styles.css
+++ b/css/styles.css
@@ -430,8 +430,8 @@ margin: -1;
   width: 170px;
   height: 90px;
   margin-right: 30px;
-  /* border: 1px solid #AFB1B8;
-  border-radius: 4px; */
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
   /* justify-content: center;
   align-items: center; */
 }
@@ -443,18 +443,13 @@ margin: -1;
 } */
 .box-clietns-icon {
   display: block;
-  width: 170px;
-  height: 90px;
-  border-radius: 4px;
-  border: 1px solid #AFB1B8;
-  display: block;
   fill: #AFB1B8;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 .box-clietns-icon:hover {
   fill: #2196F3;
-  border: 1px solid #2196F3;
+  /* border: 1px solid #2196F3; */
 }
 
 /* footer ---------------- */
