--- a/css/styles.css
+++ b/css/styles.css
@@ -438,18 +438,19 @@ margin: -1;
 .box-clietns > li>:last-child {
   margin-right: 0px;
 } 
-/* .box-clietns > li >:hover {
+.box-clietns > li >:hover {
   border: 1px solid #2196F3;
-} */
+  background-color: grey;
+}
 .box-clietns-icon {
   display: block;
   fill: #AFB1B8;
-  /* justify-content: center;
-  align-items: center; */
+  justify-content: center;
+  align-items: center;
 }
 .box-clietns-icon:hover {
   fill: #2196F3;
-  /* border: 1px solid #2196F3; */
+  border: 1px solid #2196F3;
 }
 
 /* footer ---------------- */
