--- a/css/styles.css
+++ b/css/styles.css
@@ -430,27 +430,23 @@ margin: -1;
   width: 170px;
   height: 90px;
   margin-right: 30px;
+  border-radius: 4px;  
   border: 1px solid #AFB1B8;
-  border-radius: 4px;
   justify-content: center;
   align-items: center;
 }
 .box-clietns > li>:last-child {
   margin-right: 0px;
-} 
-.box-clietns > li >:hover {
+}
+.box-clietns > li:hover{  
   border: 1px solid #2196F3;
-  background-color: grey;
 }
 .box-clietns-icon {
   display: block;
   fill: #AFB1B8;
-  justify-content: center;
-  align-items: center;
 }
 .box-clietns-icon:hover {
   fill: #2196F3;
-  border: 1px solid #2196F3;
 }
 
 /* footer ---------------- */
