--- a/css/styles.css
+++ b/css/styles.css
@@ -442,10 +442,10 @@ margin: -1;
   border: 1px solid  #2196F3;
 }
 .box-clietns-icon {
-  fill: indigo;
+  fill: #AFB1B8;
 }
 .box-clietns-icon:hover {
-  fill: black;
+  fill: #2196F3;
 }
 /* footer ---------------- */
 
